<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity"
    id="@+id/calendar"
    tools:ignore="VisualLintBounds">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="55dp"
        android:paddingTop="25dp"
        android:gravity="center">


        <TextView
            android:id="@+id/saldo_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/saldo_mes" />

        <TextView
            android:id="@+id/saldo_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/monto_mes"
            android:textSize="36sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <CalendarView
            android:id="@+id/calendarView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />
    </LinearLayout>


    <!-- Barra inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCalendario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/calendario_btn"
                android:src="@drawable/calendario"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calendario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCategorias"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/categor_as_btn"
                android:src="@drawable/categorie"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/categor_as" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGraficos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gr_ficos_btn"
                android:src="@drawable/graficos"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gr_ficos" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
