<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/main"
    android:padding="15dp">


    <!-- Botones de opciones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnIngresos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/ingresos"
                android:src="@drawable/ganancias"
                android:onClick="ingresoI"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ingresos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGastos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gastos"
                android:src="@drawable/costo"
                android:onClick="GastosGra"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gastos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnUsuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/usuario"
                android:src="@drawable/perfil1"
                android:onClick="PerfilGra"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usuario" />
        </LinearLayout>

    </LinearLayout>

    <!-- Barra inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCalendario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/calendario_txt"
                android:src="@drawable/calendario"
                android:onClick="calenGra"
                tools:ignore="DuplicateSpeakableTextCheck,ImageContrastCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_calendario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCategorias"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/categor_astxt"
                android:src="@drawable/categorie"
                android:onClick="catGra"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/categor_asbtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGraficos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gr_ficostxt"
                android:src="@drawable/graficos"
                android:onClick="Graficas"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gr_ficosbtn" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>