<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:id="@+id/nuevaCategoria">

    <!-- Botones de opciones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnIngresos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/ingresos"
                android:src="@drawable/ganancias"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ingresos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGastos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gastos"
                android:src="@drawable/costo"
                android:onClick="Gastos"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gastos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnUsuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/usuario"
                android:src="@drawable/perfil1"
                android:onClick="irPerfil"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/usuario" />
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Añadir Categoría"
        android:textSize="24sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="Nombre de la Categoría"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/category_descrp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="Descripcion de la Categoría"
        android:minHeight="48dp" />

    <Spinner
        android:id="@+id/category_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:entries="tipe"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:layout_marginBottom="150dp"
        android:layout_gravity="center" />

    <!-- Barra inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCalendario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/calendario_btn"
                android:src="@drawable/calendario"
                android:onClick="Calendario"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/calendario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCategorias"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/categor_as_btn"
                android:src="@drawable/categorie"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/categor_as" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGraficos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gr_ficos_btn"
                android:src="@drawable/graficos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gr_ficos" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
