<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#FFFFFF"
    android:id="@+id/registroGatos">

    <!-- Botones de opciones -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnIngresos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/ingresos"
                android:onClick="ingresoG"
                android:src="@drawable/ganancias" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ingresos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGastos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gastos"
                android:src="@drawable/costo"
                android:onClick="GastosG"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gastos" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnUsuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/usuario"
                android:src="@drawable/perfil1"
                android:onClick="PerfilG"
                 />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="48dp"
                android:text="@string/usuario" />
        </LinearLayout>

    </LinearLayout>

    <!-- Encabezado -->
    <TextView
        android:id="@+id/registro_gastos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="REGISTRE UN GASTO"
        android:textSize="24sp"
        android:textColor="#000000"
        android:layout_gravity="center"
        android:paddingBottom="35dp"
        android:paddingTop="30dp"/>

    <!-- Motivo del gasto -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="categoria del Gasto"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingBottom="8dp"/>
    <Spinner
        android:id="@+id/sp_categoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:entries="@array/metodos_pago"
        android:minHeight="48dp" />

    <!-- Monto del gasto -->
    <EditText
        android:id="@+id/et_monto_gasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Ingrese el monto aquí"
        android:inputType="numberDecimal"
        android:padding="12dp"
        android:backgroundTint="#D1D1D1"
        android:layout_marginBottom="12dp"/>

    <!-- Método de Pago -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="metodo de Gasto"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingBottom="8dp"/>
    <Spinner
        android:id="@+id/sp_metodo_pago"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:entries="@array/metodos_pago"
        android:minHeight="48dp" />

    <!-- Fecha del Gasto -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fecha del Gasto"
        android:textSize="16sp"
        android:textColor="#000000"
        android:paddingBottom="8dp"/>

    <EditText
        android:id="@+id/et_fecha_gasto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Seleccione la fecha"
        android:focusable="false"
        android:padding="12dp"
        android:backgroundTint="#D1D1D1"
        android:layout_marginBottom="16dp"/>

    <!-- Botón Guardar -->
    <Button
        android:id="@+id/btn_guardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Guardar"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="5dp"
        android:onClick="guardarEgreso"/>

    <!-- Barra inferior -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCalendario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/calendario_txt"
                android:src="@drawable/calendario"
                android:onClick="CalenG"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/btn_calendario" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCategorias"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/categor_astxt"
                android:src="@drawable/categorie"
                android:onClick="CatG"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/categor_asbtn" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnGraficos"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:contentDescription="@string/gr_ficostxt"
                android:src="@drawable/graficos" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gr_ficosbtn" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
